# jargon-rs

./: .cz.toml  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: audit-lint.yml  ci.yml  crates-io.yml  release.yml
.rpm/: jargon.spec
src/: lib.rs  main.rs
src/resources/: jargon.json
