[package]
name = "jargon"
description = "Command line tool for displaying a random entry from the Jargon File."
readme = "README.md"
version = "0.3.3"
authors = ["PsypherPunk <psypherpunk+github@gmail.com>"]
edition = "2021"
build = "build.rs"
license = "MPL-2.0"
repository = "https://github.com/PsypherPunk/jargon-rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[package.metadata.deb]
extended-description = "Command line tool for displaying a random entry from the Jargon File."
section = "misc"

[package.metadata.rpm]
package = "jargon"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
jargon = { path = "/usr/bin/jargon" }

[dependencies]
argh = "0"
colored = "2"
rand = "0"

[build-dependencies]
regex = "1"
flate2 = "1"
