[package]
name = "jargon"
description = "Command line tool for displaying a random entry from the Jargon File."
readme = "README.md"
version = "0.3.9"
authors = ["PsypherPunk <psypherpunk+github@gmail.com>"]
edition = "2021"
build = "build.rs"
license = "MPL-2.0"
repository = "https://github.com/PsypherPunk/jargon-rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[package.metadata.deb]
extended-description = "Command line tool for displaying a random entry from the Jargon File."
section = "misc"

[package.metadata.generate-rpm]
summary = "Command line tool for displaying a random entry from the Jargon File."
assets = [{ source = "target/release/jargon", dest = "/usr/bin/jargon" }]

[dependencies]
argh = "0"
colored = "3"
rand = "0"

[build-dependencies]
regex = "1"
flate2 = "1"
